# ChangeLog for net-www/apache
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.409 2005/09/11 14:05:44 hansmi Exp $

  11 Sep 2005; Michael Hanselmann <hansmi@gentoo.org>
  apache-1.3.33-r6.ebuild, apache-2.0.54-r15.ebuild:
  Stable on hppa and ppc.

  11 Sep 2005; Markus Rothe <corsair@gentoo.org> apache-1.3.33-r6.ebuild,
  apache-2.0.54-r15.ebuild:
  Stable on ppc64

*apache-2.0.54-r15 (10 Sep 2005)

  10 Sep 2005; Michael Stewart <vericgar@gentoo.org>
  +apache-2.0.54-r15.ebuild:
  Security bump for CAN-2005-2491 and CAN-2005-2700. Fixes bugs 103554 and 104807

*apache-1.3.33-r11 (10 Sep 2005)
*apache-1.3.33-r6 (10 Sep 2005)

  10 Sep 2005; Michael Stewart <vericgar@gentoo.org>
  +apache-1.3.33-r6.ebuild, +apache-1.3.33-r11.ebuild:
  Security bump to address CAN-2005-2700. Fixes bug 104807

  10 Sep 2005; Michael Stewart <vericgar@gentoo.org> -apache-2.0.50.ebuild,
  -apache-2.0.51.ebuild, -apache-2.0.51-r1.ebuild, -apache-2.0.52.ebuild,
  -apache-2.0.52-r1.ebuild, -apache-2.0.52-r2.ebuild,
  -apache-2.0.54-r7.ebuild, -apache-2.0.54-r8.ebuild,
  -apache-2.0.54-r10.ebuild, -apache-2.0.54-r11.ebuild,
  -apache-2.0.54-r12.ebuild, -apache-2.0.54-r13.ebuild,
  -apache-2.0.54-r14.ebuild:
  Removing old versions and revisions. Note that new-style for apache is now
  -r30 and above.

*apache-2.0.54-r30 (10 Sep 2005)

  10 Sep 2005; Michael Stewart <vericgar@gentoo.org>
  +apache-2.0.54-r30.ebuild:
  Security bump for CAN-2005-2491 and CAN-2005-2700. Fixes bugs 103554 and 104807 for new-style.

  04 Sep 2005; Hardave Riar <hardave@gentoo.org> apache-2.0.54-r9.ebuild:
  Stable on mips, bug #102991.

  21 Aug 2005; Luis Medinas <metalgod@gentoo.org> apache-2.0.54-r9.ebuild:
  Marked Stable on AMD64. Fixes bug #102991.

  21 Aug 2005; Markus Rothe <corsair@gentoo.org> apache-2.0.54-r9.ebuild:
  Stable on ppc64 (bug #102991)
